# gum.py

./: .gitignore  .gitmodules  CLAUDE.md  README.md  gum.ipynb  package.json  pyproject.toml
gum/: __init__.py  __main__.py  dem.py  gen.py  gum.py  utl.py  viz.py
image/: logo.jsx  nexus.jsx
src/: pipe.js
