[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gum"
version = "0.2.1"
description = "Language for vector graphics generation with Python bindings"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Douglas Hanley"}
]

[project.urls]
Homepage = "https://github.com/CompendiumLabs/gum.py"

[tool.setuptools]
packages = ["gum"]

[tool.setuptools.package-data]
gum = [
    "gum/*.js",
    "gum.js/dist/fonts/IBMPlexSans-Variable.ttf",
    "gum.js/dist/fonts/IBMPlexMono-Regular.ttf",
    "gum.js/dist/fonts/IBMPlexSans-Bold.ttf",
]
