[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gum-py"
version = "0.4"
description = "Python wrapper for gum.jsx, a language for creating vector graphics"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Douglas Hanley"}
]

[project.urls]
Homepage = "https://github.com/CompendiumLabs/gum.py"

[tool.setuptools]
packages = ["gum"]

[tool.setuptools.package-data]
gum = [
    "gum.js/gum.js",
    "gum.js/fonts/IBMPlexSans-Variable.ttf",
    "gum.js/fonts/IBMPlexMono-Regular.ttf",
    "gum.js/fonts/IBMPlexMono-Bold.ttf",
]
